--- a/2017Fall/Statistical Learning/Create Models.ipynb
+++ b/2017Fall/Statistical Learning/Create Models.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "from functools import partial\n",
     "from multiprocessing import Pool\n",
-    "from DataProcessor import createData, createBackTestData\n",
+    "from DataProcessor import createData\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
